--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,15 @@
         "downloads",
         "sessions",
         "bookmarks",
-        "idle"
+        "idle",
+        "storage"
+    ],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["./scripts/contentScript.js"],
+            "css": ["./css/global.css"]
+        }
     ],
     "background": {
         "service_worker": "./scripts/serviceWorker.js",
@@ -22,7 +30,8 @@
         "default_title": "Browser Events Manager",
         "default_popup": "popup.html",
         "default_icon": {
-            "32": "images/icon32.png"
+            "16": "./images/logo/favicon-16x16.png",
+            "32": "./images/logo/favicon-32x32.png"
         }
     }
 }
