changed logo, deleted unwanted code

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
         "sessions",
         "bookmarks",
         "idle",
-        "storage"
+        "storage",
+        "activeTab"
     ],
     "content_scripts": [
         {
